# AI-Driven-Mechanical-Design-for-All

./: .gitignore  CLAUDE.md  DESIGN.md
apps/backend/: .dockerignore  .gcloudignore  Dockerfile  main.py  pyproject.toml
apps/backend/data/: materials.json
apps/backend/prompts/: explainer_system.md  interpreter_system.md
apps/backend/scripts/: generate_demo_artifacts.py
apps/backend/services/: __init__.py
apps/backend/services/documenter/: README.md  cache.py  pipeline.py  storage.py  svg_fetcher.py  views.py
apps/backend/services/explainer/: README.md  cache.py  facts.py  generator.py  prompt.py
apps/backend/services/geometry/: README.md  __init__.py  builders.py  cache.py  composer.py  composition_rules.py  fallback.py  pipeline.py
apps/backend/services/interpreter/: README.md  __init__.py  app.py  config.py
apps/backend/services/physics/: README.md  __init__.py  load_case.py  solvers_registry.py
apps/backend/tests/: conftest.py
apps/backend/tests/component/: test_agent_loop.py  test_interpret_image_e2e.py  test_orchestrator_normalization.py  test_router_interpret.py  test_router_refine.py  test_router_wiring.py  test_tools.py
apps/backend/tests/fakes/: fake_gcs_client.py  fake_gemma_text.py  fake_svg_fetcher.py
apps/backend/tests/integration/: test_vertex_real.py
apps/backend/tests/unit/: test_circuit_breaker.py  test_config.py  test_dto_image.py  test_errors.py  test_intent.py  test_materials_loader.py  test_normalizer.py  test_observability.py  test_primitives_registry.py  test_prompt_loader.py  test_retry_policy.py  test_session_merge.py  (+5 more)
(+249 files in other folders)
